--- a/propperprepclient/src/Styles/main.css
+++ b/propperprepclient/src/Styles/main.css
@@ -49,3 +49,19 @@
 .recipecard-container {
     display: flex;
 }
+
+.navbar-dropdown {
+    position: absolute;
+    right: 0;
+    padding-right: 120px;
+}
+
+.ProfilePic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    height: 250px;
+    padding-top: 50px;
+    padding-bottom: 15px;
+}
